--- a/Front-End/002-Basic-HTML-Website/src/styles/styles.css
+++ b/Front-End/002-Basic-HTML-Website/src/styles/styles.css
@@ -1,9 +1,9 @@
 :root {
-    --background: #31827c;
-    --background-layout: #f7e9aa;
-    --background-box: #95c68f;
-    --color4: #fc8a80;
-    --color5: #fd4e6d;
+    --background: #fff;
+    --background-layout: #fff;
+    --background-box: #fff;
+    --item-color: #fff;
+    --box-color: #fff;
     --font-normal: 16px;
     --min-width-boxes: auto;
 }
@@ -101,6 +101,7 @@ input[type="submit"] {
     display: flex;
     flex-direction: column;
     background-color: var(--background-layout);
+    border: 1px solid black;
     gap: 16px;
     width: 60%;
     height: 100%;
@@ -149,7 +150,8 @@ input[type="submit"] {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: var(--color5);
+    background-color: var(--box-color);
+    border: 1px solid black;
     border-radius: 16px;
     height: 320px;
     opacity: 75%;
@@ -168,6 +170,7 @@ input[type="submit"] {
         min-width: var(--min-width-boxes);
         border: none;
         background-color: var(--background-box);
+        border: 1px solid black;
         border-radius: 16px;
         padding: 16px;
         margin: 0;
@@ -175,7 +178,7 @@ input[type="submit"] {
         & .div-project {
             border-width: 2px;
             border-style: none none solid none;
-            border-color: var(--background-layout);
+            border-color: black;
             font-size: 1.2rem;
         }
     }
@@ -193,7 +196,7 @@ input[type="submit"] {
             display: flex;
             flex-direction: column;
             min-width: var(--min-width-boxes);
-            border: none;
+            border: 1px solid black;
             background-color: var(--background-box);
             border-radius: 16px;
             padding: 16px;
@@ -206,7 +209,7 @@ input[type="submit"] {
         display: flex;
         flex-direction: column;
         min-width: var(--min-width-boxes);
-        border: none;
+        border: 1px solid black;
         background-color: var(--background-box);
         border-radius: 16px;
         padding: 16px;
@@ -218,7 +221,7 @@ input[type="submit"] {
     display: flex;
     flex-direction: column;
     min-width: var(--min-width-boxes);
-    border: none;
+    border: 1px solid black;
     background-color: var(--background-box);
     border-radius: 16px;
     padding: 32px;
@@ -236,7 +239,7 @@ input[type="submit"] {
             flex-direction: column;
             min-width: var(--min-width-boxes);
             background-color: var(--color4);
-            border: none;
+            border: 1px solid black;
             border-radius: 8px;
             padding: 16px;
         }
@@ -244,31 +247,50 @@ input[type="submit"] {
 }
 
 .formulary {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-rows: 1fr auto 1fr;
+    grid-template-areas:
+        "name1 name2 email"
+        "msg msg msg"
+        "btn btn btn";
     background-color: var(--background-box);
+    border: 1px solid black;
     border-radius: 16px;
     padding: 16px;
     gap: 8px;
 
-    .imsg {
-        flex: 1;
+    & div {
         display: flex;
         flex-direction: column;
     }
 
-    div {
-        flex: 0 0 calc((100% / 3) - 16px);
-        display: flex;
-        flex-direction: column;
+    & input{
+        border: 1px solid black;
     }
 
-    .ibutton {
+    & .first-name {
+        grid-area: name1;
+    }
+
+    & .last-name {
+        grid-area: name2;
+    }
+
+    & .email {
+        grid-area: email;
+    }
+
+    & .message {
+        grid-area: msg;
+    }
+
+    & .sub-button {
+        grid-area: btn;
         margin: auto;
         align-self: center;
         justify-content: center;
+        border: 1px solid black;
     }
 
     & p {
